2015-05-19  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml (has-java{2,4,5,6,7,8}): Move out of
	-select-java-non-android up to top level so that they are defined
	in the initial Ant environment.
	(java-classes): Add q2.

2015-05-13  Per Bothner  <per@bothner.com>

	* compile: New file, from gnulib, used by autoconf.

2015-02-27  Per Bothner  <per@bothner.com>

	* build.xml (java-classes): Add kawa/Source*.java.

2015-02-17  Per Bothner  <per@bothner.com>

	* configure.ac: Remove WITH_LIBTOOL macro and --with-libtool option.
	* Make-rules: Remove libtool junk.

	* build.xml (lib-scm-classes): Update to match kawa/lib/Makefile.am.

2015-01-20  Per Bothner  <per@bothner.com>

	* configure.ac: Remove most links, to avoid Windows problems.

	* config.guess: Update to new version, from gnulib.
	* config.sub: Likewise.
	* mkinstalldirs: Likewise.

2014-12-28  Per Bothner  <per@bothner.com>

	* build.scm (slib-scm-classes): Add receive.scm.

2014-12-03  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 2.0.1.
	* bin/configure.in (AC_INIT): Likewise.
	* build.xml (version.release): Likewise.

2014-12-01  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 2.0.
	* bin/configure.in (AC_INIT): Likewise.
	* build.xml (version.release): Likewise.

	* build.xml (lib-scm-classes): Fix and update filelist.

2014-11-19  Per Bothner  <per@bothner.com>

	* bin/kawa.sh.in: Use KAWA_SHELL instead of SHELL variable.
	* configure.ac: Determine and export KAWA_SHELL.
	* build.xml (kawa.shell): New property.
	(kawa.sh): Substitute KAWA_SHELL based on kawa.shell property.

2014-11-19  Per Bothner  <per@bothner.com>

	* bin/kawa.sh.in: Use SHELL autoconf variable.
	* build.xml (kawa.sh): Substitute SHELL.

	* bin/kawa.sh.in: Simplify so kawa.sh only works for in-place running.
	* Makefile.am (install-binSCRIPTS): Use sed to munge KAWALIB in kawa.sh.
	* build.xml (kawa.sh): Simplify.

2014-11-19  Per Bothner  <per@bothner.com>
